--- a/PHP框架/thinkphp5的使用/1.commond命令行的使用.md
+++ b/PHP框架/thinkphp5的使用/1.commond命令行的使用.md
@@ -182,9 +182,16 @@ $output->newLine(); //输出空行
 
 ### 3. 控制器调用
 
+控制器中执行命令
 ```php
 $output = \think\Console::call('tet',['李四',23,'--city','临安']);
 print_r($output->fetch());
+```
+命令行里调用控制器方法 比如 `application/index/controller/index.php`中的`run`方法
+```
+# 这句转目录 一定要先执行 不然 `index.php` 获取应用常量的相对目录就会出错
+cd tp5/public 
+php index.php index/index/run
 ```
 
 注意：调用的参数是按照数组正常顺序传递的`call`并没有用到系统调用，是直接实例化后调用的对应的命令类
